<resources>
    <string name="app_name">Discover</string>
    <string name="APP_NAME">DISCOVER</string>


    <string name="open">open</string>
    <string name="close">close</string>

    <!--menu title-->
    <string name="item_home">Home</string>
    <string name="item_collections">Collections</string>
    <string name="item_tags">Tags</string>
    <string name="item_favorite">Favorite</string>
    <string name="item_download">Downloads</string>
    <string name="item_settings">Settings</string>
    <string name="item_exit">Exit</string>

    <string name="action_search">Search</string>
    <string name="action_reorder">Reorder</string>
    <string name="action_latest">Latest</string>
    <string name="action_oldest">Oldest</string>
    <string name="action_popular">Popular</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--collection list frament title-->
    <string name="all">All</string>
    <string name="curated">Curated</string>
    <string name="featured">Featured</string>

    <string name="photos">Photos</string>


    <!--login activity-->
    <string name="login">LOGIN</string>
    <string name="join">JOIN</string>
    <string name="oauth_failed">Oauth Failed!</string>

    <string name="no_more_data">NO MORE DATA</string>

    <!--photo info activity-->
    <string name="action_share">Share</string>
    <string name="action_link">Link</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="wallpaper_success">Set wallpaper success</string>
    <string name="wait">Please wait...</string>
    <string name="featured_in">Featured in %1$d collections</string>
    <string name="related_tags">Related tags</string>


    <!--collection detail activity-->
    <string name="from">From</string>

    <!--search activity-->
    <string name="search">Search</string>
    <string name="tab_photo">Photos</string>
    <string name="tab_collection">Collections</string>
    <string name="tab_user">Users</string>

    <!--user adapter-->
    <string name="user_msg">%1$d Photos, %2$d Collections, %3$d Likes</string>

    <!--setting activity-->
    <string name="key_clear_cache">Clear Cache</string>
    <string name="key_language">language</string>
    <string name="title_language">Language</string>
    <array name="lan">
        <item>English</item>
        <item>中文</item>
    </array>
    <array name="lan_values">
        <item>en</item>
        <item>cn</item>
    </array>
    <string name="default_language">en</string>
    <string name="key_load_quality">load_quality</string>
    <string name="key_download_quality">download_quality</string>
    <string name="key_wallpaper_quality">wallpaper_quality</string>
    <string name="title_quality_section">Quality</string>
    <string name="title_load_quality_preference">Load Quality</string>
    <string name="summary_load_quality_preference">Choose the quality of the images that are loaded</string>
    <string name="title_download_quality_preference">Download Quality</string>
    <string name="summary_download_quality_preference">Choose the quality of the images that are downloaded</string>
    <string name="title_wallpaper_quality_preference">Wallpaper Quality</string>
    <string name="summary_wallpaper_quality_preference">Choose the quality of the wallpapers set</string>
    <array name="quality_options">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </array>
    <array name="quality_options_values">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </array>
    <string name="default_load_quality">Regular</string>
    <string name="default_download_quality">Full</string>

    <string name="downloading">Downloading</string>
    <string name="start_download">Start to download</string>

    <!--activity downloads start-->
    <string name="title_downloads">Downloads</string>
    <string name="title_downloading">Downloading</string>
    <string name="title_finished">Finished</string>
    <!--activity downloads end-->


    <!--activity user start-->
    <string name="unknown">Unknown</string>
    <string name="sure_to_logout">Are you sure to log out?</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="photos_count">%1$d Photos</string>
    <string name="collections_count">%1$d Collections</string>
    <string name="likes_count">%1$d Likes</string>
    <string name="followers_count">%1$d Followers</string>
    <string name="following_count">%1$d Following</string>
    <!--activity user end-->

    <!--activity edit profile start-->
    <string name="user_name">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="personal_site">Personal site</string>
    <string name="instagram_user_name">Instagram username</string>
    <string name="location">Location</string>
    <string name="biography">Biography</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_success">Success</string>
    <string name="edit_error">Error</string>
    <!--activity edit profile end-->

    <string name="developer">Developer</string>
    <string name="about">About</string>
    <string name="libs">Libraries</string>

</resources>

