<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_reorder"
        android:title="@string/action_reorder"
        android:icon="@drawable/ic_reorder_black_24dp"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_latest"
                android:title="@string/action_latest"
                android:icon="@drawable/ic_latest_black_24dp"/>

            <item android:id="@+id/action_oldest"
                android:title="@string/action_oldest"
                android:icon="@drawable/ic_oldest_black_24dp"/>

            <item android:id="@+id/action_popular"
                android:title="@string/action_popular"
                android:icon="@drawable/ic_popular_black_24dp"/>
        </menu>
    </item>

</menu>